--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>SATPOL PP DAN DAMKAR PROVINSI KALIMANTAN SELATAN</title>
+    <title>SATPOL PP DAN DAMKAR PROVINSI KALIMANTAN SELATAN22</title>
     <meta name="description" content="Free bootstrap template Atlas">
     <link rel="icon" href="img/logoo.png" sizes="32x32" type="image/png">
     <!-- custom.css indexbg -->
